--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,23 @@ html {
  */
 
 body {
+
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+main.container {
+
+  padding: 2em;
+  width: 450px;
+  margin: auto;
+  background-color: white;
+  margin-top: 140px;
+
+
+}
