--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -32,6 +32,14 @@ section.new-tweet h2 {
    }
 
    form textarea {
-        width: 100%;
-        padding: 10px;
+
+    width: 100%;
+    padding: 10px;
+    
+   }
+
+   .red {
+
+    color: red;
+
    }
