--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -9,6 +9,11 @@
 
 }
 
+section.tweet:hover header {
+
+    filter: opacity(100%);
+}
+
 
 .tweet header {
 
@@ -16,13 +21,10 @@
     background-color: hsla(225, 9%, 91%, 0.753);
     width: 100%;
     padding-bottom: 40px;
+    filter: opacity(60%);
 
 }
 
-.tweet header:hover {
-
-    background-color: grey;
-}
 
 
 .tweet h2 {
@@ -49,7 +51,7 @@
 
 }
 
-.tweet span {
+.tweet span.creator {
 
     float: right;
     color: grey;
@@ -62,4 +64,22 @@
     height: 80px;
     float: left;
 
+}
+
+.tweet span.date created {
+
+    float: left;
+
+}
+
+.tweet span.icons {
+
+    visibility: hidden;
+    float: right; 
+
+}
+
+section.tweet:hover span.icons {
+
+    visibility: visible;
 }
