--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,10 +3,14 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -15,7 +19,6 @@ html {
  */
 
 body {
-
   margin: 0;
   color: #244751;
   background-color: #eee;
@@ -25,13 +28,11 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-main.container {
 
+main.container {
   padding: 2em;
   width: 450px;
   margin: auto;
   background-color: white;
   margin-top: 140px;
-
-
 }
